--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  webview_flutter:
-    git:
-      url: https://github.com/andrewlee1228/plugins.git
-      path: packages/webview_flutter/webview_flutter/
-      ref: master
+  webview_flutter: ^3.0.1
   sprintf: ^6.0.0
 
 dev_dependencies:
