--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,17 +4,12 @@ version: 0.0.6
 homepage: https://github.com/andrewlee1228/flutter_jsbridge_plugin
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.22.0"
+  sdk: '>=3.0.1 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  webview_flutter:
-    git:
-      url: https://github.com/andrewlee1228/plugins.git
-      path: packages/webview_flutter/webview_flutter/
-      ref: master
+  webview_flutter: ^4.2.4
   sprintf: ^6.0.0
 
 dev_dependencies:
